--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 
-spring.datasource.url=jdbc:mysql://localhost:3306/spring
+spring.datasource.url=jdbc:mysql://localhost:3306/order_management
 spring.datasource.username=root
 spring.datasource.password=Naveen@10
 
 spring.jpa.hibernate.ddl-auto=update
+spring.main.allow-circular-references=true
