order and cust finished

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.password=Naveen@10
 
 spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-circular-references=true
+spring.jackson.serialization.fail-on-empty-beans=true
